# super-duper-dragon

./: .gitignore  Cargo.toml  constants.py  mnist.py  policy.py  policy_player.sh  requirements.txt  test_kifu_list.txt  test_kifu_list_2020.txt  train_kifu_list.txt  train_kifu_list_2020.txt  train_policy.py
.github/workflows/: coverage.yml  rust.yml
cli/: Cargo.toml
cli/src/: constants.rs  model.rs  state.rs
sdd/: constants.py  policy.py  read_kifu.py
src/: constants.rs  data_loader.rs  lib.rs  model.rs  progressbar.rs  usi.rs  util.rs
src/network/: policy.rs
src/util/: board_encoder.rs  board_packer.rs  make_input_feature.rs  make_output_label.rs
torch/: Cargo.toml
torch/src/: main.rs
