[package]
name = "super-duper-dragon"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tch = "0.2.1"
anyhow = "1.0.32"
regex = "1"
rand = "0.7.3"
shogiutil = { path = "../shogiutil-rs" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
log = "0.4.11"
env_logger = "0.7.1"
indicatif = "0.15.0"

